# agent_zoo

./: .gitignore  CLAUDE.md  LICENSE  README.md  example_use.md  pyproject.toml  repository_plan.md
docs/: memory_concepts.md  memory_manager_design.md  memory_research.md  react_architecture.md  react_implementation_plan.md
examples/: memory_usage.py
src/agent_zoo/: __init__.py
src/agent_zoo/core/: __init__.py  base.py
src/agent_zoo/core/memory/: __init__.py  items.py  manager.py  memory.py  router.py
src/agent_zoo/interfaces/: __init__.py  messages.py  state.py
src/agent_zoo/tools/: __init__.py  rate_limit.py  registry.py  schema.py  tool.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_tool_system.py
tests/unit/: __init__.py
tests/unit/core/: test_base.py
tests/unit/core/memory/: __init__.py  test_agent_memory_integration.py  test_manager.py  test_memory.py  test_memory_items.py  test_router.py
tests/unit/interfaces/: __init__.py  test_messages.py  test_state.py
tests/unit/tools/: __init__.py  test_rate_limit.py  test_registry.py  test_schema.py  test_tool.py
